Updating background color and setting min-height for to prevent overlapping

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,13 +1,58 @@
 
 body {
-	background-color: #fff;
+	background-color: #ffcba4;
 }
 
 #team{
 	position: relative;
-}
 
+	.team-wrapper{
+		min-height: 1361px;
+	}
+}
 
 #why-fly-kitchen{
 	padding-bottom: 120px
+}
+
+
+@media (max-width: 1200px){
+	#team{
+		.team-wrapper{
+			min-height: 1290px;
+		}
+	}
+
+}
+
+@media (max-width: 991px){
+	#team{
+		.team-wrapper{
+			min-height: 1915px;
+		}
+	}
+}
+
+@media (max-width: 767px){
+	#team{
+		.team-wrapper{
+			min-height: 3776px;
+		}
+	}
+}
+
+@media (max-width: 580px){
+	#team{
+		.team-wrapper{
+			min-height: 3810px;
+		}
+	}
+}
+
+@media (max-width: 520px){
+	#team{
+		.team-wrapper{
+			min-height: 3600px;
+		}
+	}
 }
